<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_building_name_label" />

    <EditText
        android:id="@+id/new_building_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_building_longitude_label" />

    <EditText
        android:id="@+id/new_building_longitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:focusable="false"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_building_latitude_label" />

    <EditText
        android:id="@+id/new_building_latitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:focusable="false"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/go_to_place_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_building_find_on_map_label"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/new_building_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_building_submit"
        android:textAllCaps="false" />

</LinearLayout>