<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_room_name_label" />

    <EditText
        android:id="@+id/new_room_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_room_floor_label" />

    <EditText
        android:id="@+id/new_room_floor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/new_room_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_room_submit"
        android:textAllCaps="false" />

</LinearLayout>