<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeFragment">


    <TextView
        android:id="@+id/emailTextView"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="TextView"
        android:gravity="center"
        android:layout_width="fill_parent"

        />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center|bottom">
        <Button
            android:id="@+id/scan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scan" />

        <Button
            android:id="@+id/train"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/train" />

        <Button
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings" />
    </LinearLayout>

</LinearLayout>